# nr-Nresults

./: .old-travis.yml  .travis.yml  database.db  pyproject.toml  pytest.ini
.github/workflows/: main.yml
nr_Nresults/jsonschemas/nr_Nresults/: nr-nresults-v1.0.0.json
nr_nresults/: api.py  config.py  constants.py  minters.py  providers.py  proxies.py  record.py  search.py
nr_nresults/jsonschemas/nr_nresults/: nr-nresults-v1.0.0.json
nr_nresults/mappings/v7/nr_nresults/: nr-nresults-v1.0.0.json
nr_nresults/marshmallow/: json.py
scripts/: extract.py
tests/: conftest.py  test_fetcher.py  test_jsonschema.py  test_mappings.py  test_marshmallow.py  test_minter.py  test_record.py  test_references.py
